[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://cachorros-fofos.jpg" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Cachorros-fofos" type="Sprite" parent="."]
position = Vector2( 499, 328 )
texture = ExtResource( 2 )

[node name="Label1" type="Label" parent="."]
modulate = Color( 0.980392, 0.972549, 0.972549, 1 )
margin_left = 3.0
margin_top = 7.0
margin_right = 1024.0
margin_bottom = 129.0
text = "atv 1"
valign = 1

[node name="Button1" type="Button" parent="Label1"]
margin_left = 228.0
margin_top = 50.0
margin_right = 451.0
margin_bottom = 110.0
text = "exibir"

[node name="Label" type="Label" parent="Label1"]
margin_left = 599.0
margin_top = 15.0
margin_right = 760.0
margin_bottom = 90.0

[node name="Label2" type="Label" parent="."]
margin_left = 2.0
margin_top = 170.0
margin_right = 1185.0
margin_bottom = 304.0
text = "atv 2"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Label2"]
margin_left = 79.0
margin_top = 34.0
margin_right = 201.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="Label2"]
margin_left = 592.0
margin_top = 44.0
margin_right = 778.0
margin_bottom = 112.0

[node name="Button2" type="Button" parent="Label2"]
margin_left = 233.0
margin_top = 40.0
margin_right = 454.0
margin_bottom = 100.0
text = "salvar e exibir"

[node name="Label3" type="Label" parent="."]
margin_left = -1.0
margin_top = 311.0
margin_right = 991.0
margin_bottom = 434.0
text = "atv 3"
valign = 1

[node name="Label" type="Label" parent="Label3"]
margin_left = 578.0
margin_top = 18.0
margin_right = 769.0
margin_bottom = 98.0

[node name="Button3" type="Button" parent="Label3"]
margin_left = 238.0
margin_top = 42.0
margin_right = 457.0
margin_bottom = 101.0
text = "exibir"

[node name="Label4" type="Label" parent="."]
margin_left = 2.0
margin_top = 471.0
margin_right = 1040.0
margin_bottom = 592.0
text = "atv 4"
valign = 1

[node name="Button4" type="Button" parent="Label4"]
margin_left = 242.0
margin_top = 22.0
margin_right = 455.0
margin_bottom = 80.0
text = "exibir"

[node name="LineEdit" type="LineEdit" parent="Label4"]
margin_left = 82.0
margin_top = 11.0
margin_right = 208.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="Label4"]
margin_left = 575.0
margin_top = 15.0
margin_right = 771.0
margin_bottom = 86.0

[connection signal="pressed" from="Label1/Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Label1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Label2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Label3/Button3" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Label3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Label4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Label4/Button4" to="." method="_on_Button_pressed"]
